# AdventOfCode2023

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  justfile  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: pull-requests.yml
src/: _logger.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day_template.py  main.py  run.py  submit.py  utils.py
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_main.py  test_run.py
