[project]
description = "Submissions for Advent of Code 2023"
name = "AdventOfCode2023"
version = "0.0.1"
dependencies = [
    "advent-of-code-data>=2.0.1",
    "numpy"
]

[build-system]
requires = [
    "setuptools>=68.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "_build",
    "build",
    "dist",
    ".venv",
    "venv",
]
target-version = "py312"

[tool.ruff.lint]
select = [
     # flake8-builtins
    "A",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # isort
    "I",
    # flake-8-unused-arguments
    "ARG",
    # perflint
    "PERF",
    # pygrep-hooks
    "PGH",
    # pylint
    "PL",
    # ruff-exclusive checks
    "RUF",
    # flake8-simplify
    "SIM",
]

ignore = [
    # (pylint) too-many-branches
    "PLR0912",
    # (pylint) magic-value
    "PLR2004"
]

[tool.pytest.ini_options]
markers = [
    "integration_test: tests that actually hit external systems",
]
